# govtech-data

./: README.md  pyproject.toml
govtech_data/: __init__.py  client.py
govtech_data/models/: api.py
govtech_data/models/resources/: datastore_search.py  package_list.py  package_show.py
govtech_data/utils/: models.py
json/models/: datastore_search.json  package_list.json  package_show.json  resource_show.json
src/govtech_data/: client.py
src/govtech_data/models/: api.py  gptactions.py
src/govtech_data/models/resources/: resource_show.py
src/govtech_data/prompts/: task.py
src/govtech_data/utils/: ai.py  commands.py  content.py  openai.py
tools/: models.py
