[tool.poetry]
name = "govtech-data"
version = "0.1.22"
description = "Library to easily access and read data from data.gov.sg"
authors = ["Khee-Chin Chua <kheechin@gmail.com>"]
license = "Singapore Open Data License"
readme = "README.md"
packages = [{include = "govtech_data", from = "src"}]
repository = "https://github.com/merlin83/govtech-data"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
jsonref = "^1.1.0"
loguru = "^0.7.0"
openai = {version = "^0.27.4", optional = true}
polars = "0.18.3"
pyarrow = {version = "^12.0.0"}
pydantic = "^1.10.7"
python-dotenv = {version = "^1.0.0", optional = true}
python-levenshtein = "^0.21"
requests = "^2.28.2"
seaborn = {version = "^0.12.2", optional = true}
thefuzz = "^0.19.0"
tiktoken = {version = "0.4.0", optional = true}

[tool.poetry.dev-dependencies]
black = "^23.3.0"
datamodel-code-generator = "0.20"
isort = "^5.12.0"

[tool.poetry.extras]
openai = ["openai", "tiktoken", "python-dotenv", "seaborn"]

[tool.poetry.scripts]
generate-models = "tools.models:generate_models"

[tool.isort]
profile = 'black'
lines_between_types = 1
combine_as_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
